加入客戶端模組管理器與 Lua callback Profiler
整合共用核心、安裝指紋與既有修復變體；以原子發布及前後影像保護中斷復原，保留部分卸載與離線操作。Profiler 提供有界計時及 CSV、metadata、JFR 匯出，維持原回傳與例外契約。